--- a/notes/0.2.0.markdown
+++ b/notes/0.2.0.markdown
@@ -9,6 +9,6 @@ New Features
         g8 --list 
 
 [jberkel]: https://github.com/jberkel
-[softprops]: https://github.com/jberkel
+[softprops]: https://github.com/softprops
 
 To upgrade, set "version" to 0.2.0 in your `~/.giter8.launchconfig` .
