--- a/notes/0.2.2.markdown
+++ b/notes/0.2.2.markdown
@@ -1,6 +1,7 @@
 * support for remote templates with binary files and images
-
 * support for resolving templates hosted on a branch of a github repository
 
-     g8 user/repo         // will fetch from the master branch of users's repo
-     g8 user/repo -b foo  // will fetch template from the `foo` branch of user's repo
+Example:
+
+    g8 user/repo         // will fetch from the master branch of users's repo
+    g8 user/repo -b foo  // will fetch template from the `foo` branch of user's repo
