--- a/notes/0.4.4.markdown
+++ b/notes/0.4.4.markdown
@@ -1,7 +1,11 @@
 ### (O)Authentication
 
-Provides an implementation for Github's client-side [oauth][oauth] support as an alternative to .gitconfig storage of private credentials
+Provides an implementation for Github's client-side [oauth][oauth]
+support as an alternative to .gitconfig storage of private credentials
 
     g8 --auth login password
 
 [oauth]: http://developer.github.com/v3/oauth/
+
+This method does not require the local storage of your github
+password. An oauth access token is stored in `~/.g8/config` .
