--- a/notes/0.4.4.markdown
+++ b/notes/0.4.4.markdown
@@ -1,7 +1,8 @@
 ### (O)Authentication
 
-Provides an implementation for Github's client-side [oauth][oauth]
-support as an alternative to .gitconfig storage of private credentials
+An implementation for Github's client-side [oauth][oauth] support,
+contributed by
+[softprops](https://github.com/n8han/giter8/commit/a944e7bf305319b019452aeb0450387a0be526bf).
 
     g8 --auth login password
 
