--- a/docs/00.md
+++ b/docs/00.md
@@ -4,3 +4,11 @@ out: index.html
 
 Giter8
 ======
+
+Giter8 is a command line tool to generate files and directories from
+templates published on Github or any other git repository.
+It's implemented in Scala and runs through the 
+[sbt launcher][launcher], but it can produce 
+output for any purpose.
+
+[launcher]: http://www.scala-sbt.org/0.13/docs/Setup.html
