--- a/docs/00.md
+++ b/docs/00.md
@@ -11,4 +11,11 @@ It's implemented in Scala and runs through the
 [sbt launcher][launcher], but it can produce 
 output for any purpose.
 
+### Credits
+
+- Original implementation (C) 2010-2015 Nathan Hamblen and contributors
+- Adapted and extended in 2016 by foundweekends project
+
+Giter8 is licensed under Apache 2.0 license
+
 [launcher]: http://www.scala-sbt.org/0.13/docs/Setup.html
