--- a/docs/02.md
+++ b/docs/02.md
@@ -42,3 +42,7 @@ them on the command line and skip the interaction:
     \$ g8 softprops/unfiltered.g8 --name=my-new-website
 
 Any unsupplied parameters are assigned their default values.
+
+### Private Repositories
+
+Giter8 will use your ssh key to access private repositories, just like git does.
