Demote root layout

--- a/notes/0.7.0.markdown
+++ b/notes/0.7.0.markdown
@@ -1,8 +1,10 @@
 ### root layout
 
-giter8 0.7.0 introduces a new template layout called *root layout*.
+giter8 0.7.0 introduces an experimental layout called *root layout*.
 When giter8 does not find `src/main/g8`, it will simply use the root directory
 of the specified Git repository as the template directory.
 
 The `default.properties` file can be placed either at the root directory
 or in `project` directory.
+Since you can no longer include template fields in the files
+under `project` its application is very limited.
