--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -17,7 +17,7 @@ itself to be an sbt project. That way,
 an sbt plugin can be employed to locally test templates before pushing
 changes to github.
 
-The easy way to start a new template project is with a giter8 template
+The easy way to start a new template project is with a Giter8 template
 made expressly for that purpose:
 
     \$ g8 foundweekends/giter8.g8
