fix missing double quotes

--- a/docs/04/00.md
+++ b/docs/04/00.md
@@ -12,7 +12,7 @@ Giter8 supplies an sbt plugin for creating and using scaffolds.
 Add the following lines in `project/scaffold.sbt`
 
 ```scala
-addSbtPlugin("org.foundweekends.giter8" % "giter8-scaffold" % $version$)
+addSbtPlugin("org.foundweekends.giter8" % "giter8-scaffold" % "$version$")
 ```
 
 Once done, the  `g8Scaffold` command can be used in the sbt console.
