--- a/docs/04/00.md
+++ b/docs/04/00.md
@@ -15,7 +15,7 @@ Add the following lines in `project/scaffold.sbt`
 addSbtPlugin("org.foundweekends.giter8" % "giter8-scaffold" % "$version$")
 ```
 
-Once done, the  `g8Scaffold` command can be used in the sbt console.
+Once done, the  `g8Scaffold` command can be used in the sbt shell.
 Use TAB completion to discover available templates.
 
 ```
@@ -34,17 +34,17 @@ className [Application]:
 ### Creating a scaffold
 
 The g8 runtime looks for scaffolds in the `src/main/scaffolds` in the given Github project.
-Each folder inside `src/main/scaffolds` is a different scaffold, and will be
-accessible in the sbt console using the folder name. Scaffold folders
+Each directory inside `src/main/scaffolds` is a different scaffold, and will be
+accessible in the sbt shell using the directory name. Scaffold directories
 may have a `default.properties` file to define field values, just like
 ordinary templates. `name` is again a special field name: if it exists,
-the scaffold will be generated into a top-level folder based on `name`,
-with subfolders following the layout of the source scaffold folder.
+the scaffold will be generated into a directory based on `name`,
+with subdirectories following the layout of the source scaffold directory.
 
 Once a template as been used, scaffolds are stored into `<project_root>/.g8`
 
 ```
->  sample/.g8
+\$ ls sample/.g8
 total 0
 drwxr-xr-x   5 jtournay  staff   170B Aug  6 03:21 .
 drwxr-xr-x  11 jtournay  staff   374B Aug  6 05:29 ..
@@ -53,4 +53,4 @@ drwxr-xr-x   4 jtournay  staff   136B Aug  6 03:21 global
 drwxr-xr-x   4 jtournay  staff   136B Aug  6 03:21 model
 ```
 
-It's also possible to create your own scaffold in any sbt project by creating or modifying the `.g8` folder.
+It's also possible to create your own scaffold in any sbt project by creating the `.g8` directory.
