--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -6,7 +6,7 @@ Giter8
 ======
 
 Giter8 (読み「ギタレート」「ぎられぃ」) は、Github をはじめとする git レポジトリ上に公開されたテンプレート使ってファイルやディレクトリを生成するためのコマンドラインツールだ。
-Scala を使って実装されていて [sbt launcher] を使って実行されるが、そのアウトプットとしてはどの用途にも使うことができる。
+Scala を使って実装されていて [sbt launcher][launcher] を使って実行されるが、そのアウトプットとしてはどの用途にも使うことができる。
 
 ### クレジット
 
