--- a/docs/ja/04/00.md
+++ b/docs/ja/04/00.md
@@ -12,7 +12,7 @@ Giter8 は scaffolding 用の sbt プラグインも提供している。
 以下を `project/scaffold.sbt` に書く:
 
 ```scala
-addSbtPlugin("org.foundweekends.giter8" % "giter8-scaffold" % "$version$")
+addSbtPlugin("org.foundweekends.giter8" % "sbt-giter8-scaffold" % "$version$")
 ```
 
 これで sbt シェルから `g8Scaffold` コマンドを使えるようになる。
