mention sbt new

--- a/docs/00.md
+++ b/docs/00.md
@@ -7,9 +7,17 @@ Giter8
 
 Giter8 is a command line tool to generate files and directories from
 templates published on Github or any other git repository.
-It's implemented in Scala and runs through the 
-[sbt launcher][launcher], but it can produce 
+It's implemented in Scala and runs through the
+[sbt launcher][launcher], but it can produce
 output for any purpose.
+
+### sbt new integration
+
+Starting sbt 0.13.13, Giter8 can be called from sbt's ["new" command][new] as follows:
+
+```
+\$ sbt new eed3si9n/hello.g8
+```
 
 ### Credits
 
@@ -19,3 +27,4 @@ output for any purpose.
 Giter8 is licensed under Apache 2.0 license
 
 [launcher]: http://www.scala-sbt.org/0.13/docs/Setup.html
+[new]: http://www.scala-sbt.org/0.13/docs/sbt-new-and-Templates.html
