--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -2,8 +2,36 @@
 out: template.html
 ---
 
+  [CC0]: https://creativecommons.org/publicdomain/zero/1.0/
+
 Making your own templates
 -------------------------
+
+### Use CC0 1.0 for template licensing
+
+We recommend licensing software templates under [CC0 1.0][CC0],
+which waives all copyrights and related rights, similar to the "public domain."
+
+If you reside in a country covered by the Berne Convention, such as the US,
+copyright will arise automatically without registration.
+Thus, people won't have legal right to use your template if you do not
+declare the terms of license.
+The tricky thing is that even permissive licenses such as MIT License and Apache License will
+require attribution to your template in the template user's software.
+To remove all claims to the templated snippets, distribute it under CC0, which is an international equivalent to public domain.
+
+```
+Template license
+----------------
+Written in <YEAR> by <AUTHOR NAME> <AUTHOR E-MAIL ADDRESS>
+[other author/contributor lines as appropriate]
+
+To the extent possible under law, the author(s) have dedicated all copyright and related
+and neighboring rights to this template to the public domain worldwide.
+This template is distributed without any warranty. See <http://creativecommons.org/publicdomain/zero/1.0/>.
+```
+
+### template layout
 
 The g8 runtime looks for templates in two locations in a given Github project:
 
