--- a/docs/ja/03/00.md
+++ b/docs/ja/03/00.md
@@ -2,8 +2,34 @@
 out: template.html
 ---
 
+  [CC0]: https://creativecommons.org/publicdomain/zero/1.0/
+
 テンプレートの作り方
 -----------------
+
+### テンプレートのライセンスは CC0 1.0 を使う
+
+ソフトウェアのテンプレートのライセンスには、いわゆる「パブリックドメイン」同様に全ての著作権および隣接する権利を放棄する
+[CC0 1.0][CC0] を使用することを推奨する。
+
+日本のようなベルヌ条約締結国に在住する場合、著作権は登録無しでも自動的に発生する。
+そのため、テンプレートを公開しても使用ライセンスを明示しない限り他人は使用する法的権利が無いことになる。
+ややこしいのは寛容 (permissive) と言われている MIT License や Apache License
+でも、テンプレートの使用者がテンプレート作者への帰属 (attribution, クレジットに名前を書くこと) を行うことを要請する。
+テンプレートに含まれるコードスニペットへの権利を一切放棄するには、国際的なパブリックドメイン相当の CC0 のもとで配布する一択となる。
+
+```
+Template license
+----------------
+Written in <YEAR> by <AUTHOR NAME> <AUTHOR E-MAIL ADDRESS>
+[other author/contributor lines as appropriate]
+
+To the extent possible under law, the author(s) have dedicated all copyright and related
+and neighboring rights to this template to the public domain worldwide.
+This template is distributed without any warranty. See <http://creativecommons.org/publicdomain/zero/1.0/>.
+```
+
+### テンプレートのレイアウト
 
 Github プロジェクトがあるとき、Giter8 ランタイムは以下の 2つのパスにテンプレートを探しに行く:
 
