use new groupId and g8 template for unfiltered

--- a/docs/02.md
+++ b/docs/02.md
@@ -8,19 +8,19 @@ Usage
 Template repositories must reside on github and be named with the
 suffix `.g8`. We're keeping a [list of templates on the wiki][wiki].
 
-To apply a template, for example, [softprops/unfiltered.g8][uft]:
+To apply a template, for example, [unfiltered/unfiltered.g8][uft]:
 
-[uft]: http://github.com/softprops/unfiltered.g8
+[uft]: http://github.com/unfiltered/unfiltered.g8
 [wiki]: http://github.com/foundweekends/giter8/wiki/giter8-templates
 
-    \$ g8 softprops/unfiltered.g8
+    \$ g8 unfiltered/unfiltered.g8
 
-Giter8 resolves this to the `softprops/unfiltered.g8`
+Giter8 resolves this to the `unfiltered/unfiltered.g8`
 repository and queries Github for the project's template
 parameters.
 Alternatively, you can also use a git repository full name
 
-    \$ g8 https://github.com/softprops/unfiltered.g8.git
+    \$ g8 https://github.com/unfiltered/unfiltered.g8.git
 
 You'll be prompted for each parameter, with its default
 value in square brackets:
@@ -39,7 +39,7 @@ the current directory, skipping over any files that already exist.
 Once you become familiar with a template's parameters, you can enter
 them on the command line and skip the interaction:
 
-    \$ g8 softprops/unfiltered.g8 --name=my-new-website
+    \$ g8 unfiltered/unfiltered.g8 --name=my-new-website
 
 Any unsupplied parameters are assigned their default values.
 
