--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -131,7 +131,7 @@ library, we could refer to the latest version as follows:
 ```
 name = My Template Project
 description = Creates a giter8 project template.
-unfiltered_version = maven(net.databinder, unfiltered_2.11)
+unfiltered_version = maven(ws.unfiltered, unfiltered_2.11)
 ```
 
 ### root layout
