--- a/docs/ja/03/00.md
+++ b/docs/ja/03/00.md
@@ -118,7 +118,7 @@ developer_url [https://github.com/n8han]:
 ```
 name = My Template Project
 description = Creates a giter8 project template.
-unfiltered_version = maven(net.databinder, unfiltered_2.11)
+unfiltered_version = maven(ws.unfiltered, unfiltered_2.11)
 ```
 
 ### root レイアウト
