Fix dollar sign issue in documentation
Dollar sign should be escaped when used in markdown files if they are
converted to html. Unescaped dollar can be treated as start of math
formula.

--- a/docs/05.md
+++ b/docs/05.md
@@ -13,7 +13,7 @@ to try out your changes before you open a pull request. This is how you do it.
 Giter8 uses [conscript] as distribution mechanism. You can find more documentation
 about conscript on its [official page].
 
-#### Fixing $PATH:
+#### Fixing `PATH`:
 
 Before you install giter8 with conscript, you need to ensure, that
 conscript directory has higher precedence than default installation path.
