add stable dependency option to maven
This is an implementation of #164, which allows the user to specify
a "stable" dependency version using maven. "Stable", here implies that
the dependency is not a Release Candidate, Milestone Release or any
other non-final release. Basically it only allows releases that are
of the format: major.minor.patch.

This update does a couple of things:

1. Verifies that the latest version of a dependency is stable.
2. If the latest version of the dependency is not stable it looks through
all existing versions and finds the latest version that is stable.

The maven syntax has been extended to include an optional "stable" entry
which turns on a stable dependency:

```
maven(org, artifactId, stable)
```

I'm looking for some feedback as to whether this is an acceptable
approach to implement this solution. I'm happy to update it as necessary.

--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -134,6 +134,18 @@ description = Creates a giter8 project template.
 unfiltered_version = maven(ws.unfiltered, unfiltered_2.11)
 ```
 
+To only use the latest stable release (excluding Milestone builds,
+Release candidates etc) specify a "stable" value in the
+property value format `maven(groupId, artifactId, stable)`.
+To use the latest stable version for the Scalatest library
+we could refer to it as follows:
+
+```
+name = My Template Project
+description = Creates a giter8 project template.
+scalatest_version = maven(org.scalatest, scalatest_2.11, stable)
+```
+
 ### root layout
 
 There's an experimental layout called root layout,
