Fix dollar sign in documentation
(cherry picked from commit 980de934bd209e273b856ab57370b7e365f644a1)

--- a/docs/05.md
+++ b/docs/05.md
@@ -18,7 +18,7 @@ about conscript on its [official page].
 Before you install giter8 with conscript, you need to ensure, that
 conscript directory has higher precedence than default installation path.
 
-You can either delete existing version of giter8, or change `$PATH` variable such that 
+You can either delete existing version of giter8, or change `PATH` variable such that 
 `~/.conscript/bin` is before.
 
 #### To install local version:
