--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -90,6 +90,28 @@ project_url [https://github.com/n8han/my-proj]:
 developer_url [https://github.com/n8han]:
 ```
 
+### Conditionals
+
+All fields have a property `truthy` to be used in [conditionals][conditionals]:
+`"y"`, `"yes"`, and `"true"` evaluate to `true`; anything else evaluates to `false`.
+
+```
+scala212 = yes
+scala211 = no
+```
+
+```
+$if(scala212.truthy)$
+scalaVersion := "2.12.3"
+$elseif(scala211.truthy)$
+scalaVersion := "2.11.11"
+$else$
+scalaVersion := "2.10.6"
+$endif$
+```
+
+[conditionals]: https://github.com/antlr/stringtemplate4/blob/master/doc/templates.md#conditionals
+
 ### name field
 
 The `name` field, if defined, is treated specially by Giter8. It is
