Support for conditionals #157

--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -90,6 +90,18 @@ project_url [https://github.com/n8han/my-proj]:
 developer_url [https://github.com/n8han]:
 ```
 
+### Conditionals
+
+If the default value for a field is one of `y`, `yes`, `n`, `no`, `true`,
+or `false`, the field is assumed to be a boolean and can be used as a
+[StringTemplate conditional][conditionals].
+
+[conditionals]: https://github.com/antlr/stringtemplate4/blob/master/doc/templates.md#conditionals
+
+Please notice that if you try to use a boolean field as string
+in a template, it will be evaluated as either `"true"` or
+`"false"`, regardless of user input.
+
 ### name field
 
 The `name` field, if defined, is treated specially by Giter8. It is
