Add example to documentation

--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -94,7 +94,11 @@ developer_url [https://github.com/n8han]:
 
 If the default value for a field is one of `y`, `yes`, `n`, `no`, `true`,
 or `false`, the field is assumed to be a boolean and can be used as a
-[StringTemplate conditional][conditionals].
+[StringTemplate conditional][conditionals]:
+
+```
+$if(show)$now you see me$endif$
+```
 
 [conditionals]: https://github.com/antlr/stringtemplate4/blob/master/doc/templates.md#conditionals
 
