--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -97,7 +97,13 @@ or `false`, the field is assumed to be a boolean and can be used as a
 [StringTemplate conditional][conditionals]:
 
 ```
-$if(show)$now you see me$endif$
+$if(scala212)$
+scalaVersion := "2.12.3"
+$elseif(scala211)$
+scalaVersion := "2.11.8"
+$else$
+scalaVersion := "2.10.6"
+$endif$
 ```
 
 [conditionals]: https://github.com/antlr/stringtemplate4/blob/master/doc/templates.md#conditionals
