Minor documentation changes

--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -92,8 +92,8 @@ developer_url [https://github.com/n8han]:
 
 ### Conditionals
 
-If the default value for a field is one of `y`, `yes`, `n`, `no`, `true`,
-or `false`, the field is assumed to be a boolean and can be used as a
+If the value of a field is one of `y`, `yes`, `n`, `no`, `true`, or
+`false`, the field is assumed to be a boolean and can be used as a
 [StringTemplate conditional][conditionals]:
 
 ```
@@ -108,9 +108,8 @@ $endif$
 
 [conditionals]: https://github.com/antlr/stringtemplate4/blob/master/doc/templates.md#conditionals
 
-Please notice that if you try to use a boolean field as string
-in a template, it will be evaluated as either `"true"` or
-`"false"`, regardless of user input.
+Please notice that if you use a boolean field as string in a template
+it will be rendered as `"true"` or `"false"`, regardless of user input.
 
 ### name field
 
