--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -94,7 +94,7 @@ developer_url [https://github.com/n8han]:
 
 If the value of field `foo` is one of `y`, `yes`, `n`, `no`, `true`, or
 `false`, a companion field `__foo` of type boolean will be automatically
-be added. It can be then used in [StringTemplate conditional][conditionals]:
+added. It can then be used in [StringTemplate conditional][conditionals]:
 
 
 ```
