--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -94,7 +94,7 @@ developer_url [https://github.com/n8han]:
 
 If the value of field `foo` is one of `y`, `yes`, `n`, `no`, `true`, or
 `false`, a companion field `__foo` of type boolean will be automatically
-added. It can then be used in [StringTemplate conditional][conditionals]:
+added. It can then be used in [conditionals][conditionals]:
 
 
 ```
@@ -106,7 +106,7 @@ scala211 = no
 $if(__scala212)$
 scalaVersion := "2.12.3"
 $elseif(__scala211)$
-scalaVersion := "2.11.8"
+scalaVersion := "2.11.11"
 $else$
 scalaVersion := "2.10.6"
 $endif$
