--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -36,7 +36,7 @@ This template is distributed without any warranty. See <http://creativecommons.o
 The g8 runtime looks for templates in two locations in a given Github project:
 
 - If the `src/main/g8` directory is present it uses `src/main/g8` (`src` layout)
-- If it does not exist, then the root directory is used root layout)
+- If it does not exist, then the root directory is used (root layout)
 
 ### src layout
 
