--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -92,7 +92,7 @@ developer_url [https://github.com/n8han]:
 
 ### Conditionals
 
-All fields have a property `truthy` to be used in [conditionals][conditionals]:
+All fields have a property named `truthy` to be used in [conditional expressions][conditionals].
 `"y"`, `"yes"`, and `"true"` evaluate to `true`; anything else evaluates to `false`.
 
 ```
@@ -100,15 +100,17 @@ scala212 = yes
 scala211 = no
 ```
 
-```
-$if(scala212.truthy)$
+These could be used in a template as follows:
+
+<pre>
+\$if(scala212.truthy)\$
 scalaVersion := "2.12.3"
-$elseif(scala211.truthy)$
+\$elseif(scala211.truthy)\$
 scalaVersion := "2.11.11"
-$else$
+\$else\$
 scalaVersion := "2.10.6"
-$endif$
-```
+\$endif\$
+</pre>
 
 [conditionals]: https://github.com/antlr/stringtemplate4/blob/master/doc/templates.md#conditionals
 
