Escape interpolated identifiers

--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -117,13 +117,13 @@ These could also be used include/exclude files or directories:
 
 ```bash
 src/main/g8
-├── $name__normalize$
-│   ├── $if(jvm.truthy)$jvm$endif$
+├── \$name__normalize\$
+│   ├── \$if(jvm.truthy)\$jvm\$endif\$
 │   │   └── src
 │   │       └── main
 │   │           └── scala
-│   │               └── $organization__packaged$
-│   │                   └── $name;format="Camel"$.scala
+│   │               └── \$organization__packaged\$
+│   │                   └── \$name;format="Camel"\$.scala
 
 ```
 
