use latest scala-sbt documentation url

--- a/docs/00.md
+++ b/docs/00.md
@@ -26,5 +26,5 @@ Starting sbt 0.13.13, Giter8 can be called from sbt's ["new" command][new] as fo
 
 Giter8 is licensed under Apache 2.0 license
 
-[launcher]: http://www.scala-sbt.org/0.13/docs/Setup.html
-[new]: http://www.scala-sbt.org/0.13/docs/sbt-new-and-Templates.html
+[launcher]: https://www.scala-sbt.org/1.x/docs/Setup.html
+[new]: https://www.scala-sbt.org/1.x/docs/sbt-new-and-Templates.html
