--- a/docs/ja/00.md
+++ b/docs/ja/00.md
@@ -23,5 +23,5 @@ sbt 0.13.13 より、Giter8 は sbt の ["new" コマンド][new]から呼び出
 
 Giter8 は Apache 2.0 license によって示される条件下において公開される。
 
-[launcher]: http://www.scala-sbt.org/0.13/docs/Setup.html
-[new]: http://www.scala-sbt.org/0.13/docs/sbt-new-and-Templates.html
+[launcher]: https://www.scala-sbt.org/1.x/docs/Setup.html
+[new]: https://www.scala-sbt.org/1.x/docs/sbt-new-and-Templates.html
