use https instead of http in docs

--- a/docs/01.md
+++ b/docs/01.md
@@ -28,4 +28,4 @@ Giter8 is also installable with the OS X package manager [Homebrew][]:
 
     \$ brew update && brew install giter8
 
-[Homebrew]: http://brew.sh
+[Homebrew]: https://brew.sh
