--- a/docs/02.md
+++ b/docs/02.md
@@ -10,8 +10,8 @@ suffix `.g8`. We're keeping a [list of templates on the wiki][wiki].
 
 To apply a template, for example, [unfiltered/unfiltered.g8][uft]:
 
-[uft]: http://github.com/unfiltered/unfiltered.g8
-[wiki]: http://github.com/foundweekends/giter8/wiki/giter8-templates
+[uft]: https://github.com/unfiltered/unfiltered.g8
+[wiki]: https://github.com/foundweekends/giter8/wiki/giter8-templates
 
     \$ g8 unfiltered/unfiltered.g8
 
