--- a/docs/03/00.md
+++ b/docs/03/00.md
@@ -28,7 +28,7 @@ Written in <YEAR> by <AUTHOR NAME> <AUTHOR E-MAIL ADDRESS>
 
 To the extent possible under law, the author(s) have dedicated all copyright and related
 and neighboring rights to this template to the public domain worldwide.
-This template is distributed without any warranty. See <http://creativecommons.org/publicdomain/zero/1.0/>.
+This template is distributed without any warranty. See <https://creativecommons.org/publicdomain/zero/1.0/>.
 ```
 
 ### template layout
@@ -68,7 +68,7 @@ might be referenced in the source as:
     class \$classname\$ {
 
 [scalasti]: http://bmc.github.com/scalasti/
-[st]: http://www.stringtemplate.org/
+[st]: https://www.stringtemplate.org/
 
 The template fields themselves can be utilized to define the defaults
 of other fields.  For instance, you could build some URLs given the
