--- a/docs/ja/02.md
+++ b/docs/ja/02.md
@@ -10,8 +10,8 @@ out: usage.html
 
 例えば、[unfiltered/unfiltered.g8][uft] というテンプレートを適用するには以下を実行する:
 
-[uft]: http://github.com/unfiltered/unfiltered.g8
-[wiki]: http://github.com/foundweekends/giter8/wiki/giter8-templates
+[uft]: https://github.com/unfiltered/unfiltered.g8
+[wiki]: https://github.com/foundweekends/giter8/wiki/giter8-templates
 
     \$ g8 unfiltered/unfiltered.g8
 
