--- a/docs/ja/03/00.md
+++ b/docs/ja/03/00.md
@@ -26,7 +26,7 @@ Written in <YEAR> by <AUTHOR NAME> <AUTHOR E-MAIL ADDRESS>
 
 To the extent possible under law, the author(s) have dedicated all copyright and related
 and neighboring rights to this template to the public domain worldwide.
-This template is distributed without any warranty. See <http://creativecommons.org/publicdomain/zero/1.0/>.
+This template is distributed without any warranty. See <https://creativecommons.org/publicdomain/zero/1.0/>.
 ```
 
 ### テンプレートのレイアウト
@@ -62,7 +62,7 @@ Giter8 テンプレートに実際の適用を行うのは [Scalasti][scalasti] 
 といったふうに表記される。
 
 [scalasti]: http://bmc.github.com/scalasti/
-[st]: http://www.stringtemplate.org/
+[st]: https://www.stringtemplate.org/
 
 このテンプレートフィールドは他のフィールドのデフォルト値を定義するのにも使うことができる。
 例えば、ユーザの Github id を使って URL を作ることが可能だ:
