--- a/docs/ko/03/00.md
+++ b/docs/ko/03/00.md
@@ -39,7 +39,7 @@ Github 프로젝트가 있을때, Giter8 런타임은 다음의 두가지 경로
     \$ g8 foundweekends/giter8.g8
 
 이 명령은 `src/main/g8` 안에 임시 소스가 들어간 sbt프로젝트를 생성합니다.
-`default.properties` 라는 Java 프로퍼티 파일이 템플릿 필드 및 기본 값을 정의 합니다. プロパティファイルがテンプレートのフィールドとそのデフォルト値を定義する。
+`default.properties` 라는 Java 프로퍼티 파일이 템플릿 필드 및 기본 값을 정의 합니다. 
 
 ### default.properties
 
