--- a/docs/ko/04/00.md
+++ b/docs/ko/04/00.md
@@ -5,7 +5,7 @@ out: scaffolding.html
 Scaffolding 플러그인
 ---------------------
 
-Giter8는 scaffolding 용 sbt 플러그인도 제공하고있다.
+Giter8는 scaffolding 용 sbt 플러그인도 제공하고 있습니다.
 
 ### scaffold 플러그인의 사용
 
