--- a/docs/ko/05.md
+++ b/docs/ko/05.md
@@ -11,7 +11,7 @@ out: contributing.html
 변경 사항을 시험해보기를 원할 것입니다. 아래 방법을 참고하세요.
 
 
-Giter8은 배포를 위해 [conscript] 를 사용합니다.  [official page]에서 conscript에 대한 상세 정보를 확인 할 수 있습니다.
+Giter8은 배포를 위해 [conscript] 를 사용합니다.  [공식페이지]에서 conscript에 대한 상세 정보를 확인 할 수 있습니다.
 
 #### Fixing `PATH`:
 
